Added further login functionality and CRUD operations

--- a/FrontEnd/home.html
+++ b/FrontEnd/home.html
@@ -24,7 +24,7 @@
 </head>
 <body>
 
-    <div class="container3">
+    <div class="container">
 
         <nav class="header">
             <div class="nav_container">
